--- a/2. naloga.ipynb
+++ b/2. naloga.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -120,7 +120,7 @@
        "[130 rows x 3 columns]"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -242,7 +242,7 @@
        "[130 rows x 2 columns]"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -254,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -266,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 36,
    "metadata": {
     "scrolled": false
    },
@@ -304,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -350,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -359,12 +359,59 @@
      "text": [
       "\n",
       " c) Preizkusite domnevo, da imajo moški in ženske v povprečju enako telesno temperaturo. \n",
-      "\n"
+      "\n",
+      "Vrednost testa je -2.2854345381654984, absolutna vrednost pa 2.2854345381654984\n",
+      "1.9977296536259739\n",
+      "Pri 0.05 hipotezo ovržemo\n",
+      "2.654854342721057\n",
+      "Pri 0.01 hipotezo sprejmemo\n",
+      "ENOSTRANSKI TEST\n",
+      "-1.6690130248403527\n",
+      "Pri 0.05 hipotezo ovržemo\n",
+      "-2.386037046069385\n",
+      "Pri 0.01 hipotezo sprejmemo\n"
      ]
     }
    ],
    "source": [
-    "print('\\n c) Preizkusite domnevo, da imajo moški in ženske v povprečju enako telesno temperaturo. \\n')"
+    "print('\\n c) Preizkusite domnevo, da imajo moški in ženske v povprečju enako telesno temperaturo. \\n')\n",
+    "\n",
+    "se = np.sqrt((std_m*std_m + std_ž*std_ž)/n)\n",
+    "T = (povp_m - povp_ž)/se\n",
+    "abs_T = abs(T)\n",
+    "\n",
+    "print('Vrednost testa je {0}, absolutna vrednost pa {1}'.format(T, abs_T))\n",
+    "\n",
+    "alpha = 0.05\n",
+    "pogoj = staty.t.isf(alpha/2, n-1)\n",
+    "print(str(pogoj))\n",
+    "if abs_T < pogoj:\n",
+    "    print('Pri 0.05 hipotezo sprejmemo')\n",
+    "else:\n",
+    "    print('Pri 0.05 hipotezo ovržemo')\n",
+    "alpha = 0.01\n",
+    "pogoj = staty.t.isf(alpha/2, n-1)\n",
+    "print(str(pogoj))\n",
+    "if abs_T < pogoj:\n",
+    "    print('Pri 0.01 hipotezo sprejmemo')\n",
+    "else:\n",
+    "    print('Pri 0.01 hipotezo ovržemo')\n",
+    "print('ENOSTRANSKI TEST')\n",
+    "alpha = 0.05\n",
+    "pogoj = -staty.t.isf(alpha, n-1)\n",
+    "print(str(pogoj))\n",
+    "if T > pogoj:\n",
+    "    print('Pri 0.05 hipotezo sprejmemo')\n",
+    "else:\n",
+    "    print('Pri 0.05 hipotezo ovržemo')\n",
+    "alpha = 0.01\n",
+    "pogoj = -staty.t.isf(alpha, n-1)\n",
+    "print(str(pogoj))\n",
+    "if T > pogoj:\n",
+    "    print('Pri 0.01 hipotezo sprejmemo')\n",
+    "else:\n",
+    "    print('Pri 0.01 hipotezo ovržemo')\n",
+    "    "
    ]
   }
  ],
@@ -384,7 +431,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.2"
+   "version": "3.7.2"
   }
  },
  "nbformat": 4,
