--- a/Seminarska.tex
+++ b/Seminarska.tex
@@ -285,8 +285,11 @@ $$T = \frac{(\hat{\mu_1} - \hat{\mu_2}) - (\mu_1 - \mu_2)}
 \sim Student(64)
 $$ \text{.}
 
-Če upoštevamo ničelno domnevo $H_0 : \mu_1 = \mu_2$, je $T = \frac{(\hat{\mu_1}
- - \hat{\mu_2})} {\sqrt{\frac{\hat{\sigma}_1^2 + \hat{\sigma}_2^2}{65}}}$. Ker 
+Če upoštevamo ničelno domnevo $H_0 : \mu_1 = \mu_2$, je 
+$$T = \frac{(\hat{\mu_1} - \hat{\mu_2})} {\sqrt{\frac{\hat{\sigma}_1^2 + 
+\hat{\sigma}_2^2}{65}}}\text{.}
+$$
+Ker 
 smo povprečji in standardna odklona ocenili že pri prvi točki, lahko izračunamo
 vrednost testa $T$:
 
